O(1) self-collision + topology modulo
- Snake: ArrayDeque body + parallel HashSet for O(1) contains;
  StringBuilder in toString; getRealDirection guards length<2;
  constructors accept Collection<Position>.
- SnakeField: use snake.contains(headPos) on the hot move path;
  randomApple signature widened to Collection<Position>.
- Torus/KleinBottle: Math.floorMod in place of while-loop wrapping.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>